--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>ez-quiz-master</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ez-quiz-master</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for Spring Boot quiz</description>
 	<url/>
 	<licenses>
 		<license/>
