--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,18 @@
-spring.application.name=ez-quiz-master
-server.servlet.context-path=/ez-quiz-master
+spring.application.name=ezquizmaster
+server.servlet.context-path=/ezquizmaster
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ez_quiz_master_db
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.security.oauth2.client.registration.google.client-id=640364919747-uu4opbq9so3ep8mfqbq72hct0h0l7aop.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+
