--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,11 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.quizapp</groupId>
-	<artifactId>quiz-backend</artifactId>
+	<groupId>com.naglabs</groupId>
+	<artifactId>ezquizmaster</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<name>ezquizmaster</name>
 	<packaging>jar</packaging>
-
-	<name>Quiz Game Backend</name>
 	<description>Spring Boot Quiz Game powered by AI</description>
 
 	<properties>
@@ -41,12 +40,6 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-		</dependency>
-
-		<!-- Spring Boot Web for REST API and WebClient -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<!-- Spring Boot WebFlux for WebClient -->
@@ -85,6 +78,29 @@
 			<groupId>io.github.cdimascio</groupId>
 			<artifactId>dotenv-java</artifactId>
 			<version>3.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- Spring Security + OAuth -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 
