--- a/src/main/resources/qno-score.properties
+++ b/src/main/resources/qno-score.properties
@@ -1,3 +1,5 @@
+#qno=score/points
+
 #EASY
 1=1
 2=2
@@ -9,11 +11,11 @@
 7=15
 8=20
 9=25
-10=35
+10=30
 #DIFFICULT
-11=45
-12=55
-13=65
+11=40
+12=50
+13=60
 14=75
 #EVIL
 15=100
